--- a/index.html
+++ b/index.html
@@ -124,5 +124,6 @@
         <p class="footer__copyright">&copy; 2022 Around the U.S.</p>
       </footer>
     </div>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
