--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
   </head>
 
   <body class="page">
+    <div class="modal">
+      <div class="modal__container">
+          <button class="modal__close-button"></button>
+          <p class="modal__heading">Edit profile</p>
+          <form class="modal__form">
+              <input class="modal__form-input" type="text" name="title" placeholder="Jacques Cousteau">
+              <input class="modal__form-input" type="text" name="subtitle" placeholder="Explorer">
+              <button class="modal__button">Save</button>
+          </form>
+      </div>
+  </div>
     <div class="page__content">
       <header class="header page__section">
         <img
