--- a/index.html
+++ b/index.html
@@ -16,18 +16,7 @@
   </head>
 
   <body class="page">
-    <div class="modal" id="profile-edit-modal">
-      <div class="modal__container">
-          <button class="modal__close-button" id="profile-modal-close-btn"></button>
-          <p class="modal__heading">Edit profile</p>
-          <form class="modal__form">
-              <input class="modal__form-input" type="text" name="title" placeholder="Jacques Cousteau">
-              <input class="modal__form-input" type="text" name="subtitle" placeholder="Explorer">
-              <button class="modal__button">Save</button>
-          </form>
-      </div>
-  </div>
-    <div class="page__content">
+    <div class="page__section">
       <header class="header page__section">
         <img
           src="images/Logo.svg"
@@ -61,81 +50,67 @@
           ></button>
         </section>
 
-        <section class="cards page__section">
-          <ul class="cards__list">
-            <li class="card">
-              <img
-                src="./images/yosemite-valley.jpg"
-                alt="Yosemite Valley"
-                class="card__image"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/lake-louise.jpg"
-                alt="Lake Louise"
-                class="card__image"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Lake Louise</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/bald-mountains.jpg"
-                alt="Bald Mountains"
-                class="card__image"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/latemar.jpg"
-                alt="Latemar"
-                class="card__image"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Latemar</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/vanoise-national-park.jpg"
-                alt="Vanoise"
-                class="card__image"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-            <li class="card">
-              <img
-                src="./images/lago-di-braies.jpg"
-                alt="Lago di Braies"
-                class="card__image"
-              />
-              <div class="card__description">
-                <h2 class="card__title">Lago di Braies</h2>
-                <button class="card__like-button" type="button"></button>
-              </div>
-            </li>
-          </ul>
+        <section class="card page__section">
+          <ul class="card__list">
         </section>
+        
       </main>
       <footer class="footer page__section">
         <p class="footer__copyright">&copy; 2022 Around the U.S.</p>
       </footer>
     </div>
-    <script src="scripts/index.js"></script>
+
+    <div class="modal" id="profile-edit-modal">
+      <div class="modal__container">
+        <button
+          class="modal__close"
+          id="profile-modal-close"
+          type="button"
+          aria-label="Modal Close Button"
+        ></button>
+        <h2 class="modal__heading">Edit profile</h2>
+        <form class="modal__form">
+          <input
+            type="text"
+            class="modal__input"
+            id="profile-title-input"
+            name="title"
+            placeholder="Name"
+            required
+          />
+          <input
+            type="text"
+            class="modal__input"
+            id="profile-description-input"
+            name="description"
+            placeholder="Description"
+            required
+          />
+          <button
+            class="modal__button"
+            type="submit"
+            aria-label="Modal Save Button"
+          >
+            Save
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <template id="card-template">
+      <li class="card__list-item">
+        <img class="card__image" src="" alt="" />
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button
+            class="card__like-button"
+            type="button"
+            aria-label="Like Button"
+          ></button>
+        </div>
+      </li>
+    </template>
+
+    <script src="scripts/index.js" defer></script>
   </body>
 </html>
