--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the US</title>
-    <link rel="icon" type="image/x-con" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <meta name="description" content="Around the US" />
     <meta
       name="keywords"
@@ -51,7 +51,7 @@
         </section>
 
         <section class="card page__section">
-          <ul class="card__list">
+          <ul class="card__list"></ul>
         </section>
         
       </main>
