--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           </div>
           <button
             class="profile__add-button"
+            id="add-card-button"
             aria-label="add image"
             type="button"
           ></button>
@@ -60,6 +61,7 @@
       </footer>
     </div>
 
+    <!-- Modal: Edit Card -->
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
         <button
@@ -97,8 +99,75 @@
       </div>
     </div>
 
+    <!-- Modal: Add Card -->
+
+    <div class="modal" id="add-card-modal">
+      <div class="modal__container">
+        <button
+          class="modal__close"
+          id="add-card-modal-close"
+          type="button"
+          aria-label="Modal Close Button"
+        ></button>
+        <h2 class="modal__heading">New place</h2>
+        <form class="modal__form" id="add-card-form">
+          <input
+            type="text"
+            class="modal__input modal__input_type_title"
+            id="add-card-title-input"
+            name="title"
+            placeholder="Title"
+            required
+          />
+          <input
+            type="url"
+            class="modal__input modal__input_type_URL"
+            id="add-card-modal-URL"
+            name="link"
+            placeholder="Image Link"
+            required
+          />
+          <button
+            class="modal__button"
+            type="submit"
+            aria-label="Modal Save Button"
+          >
+            Save
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Modal: Preview Image -->
+
+    <div class="modal" id="preview-image-modal">
+      <div class="modal__preview-container">
+        <button
+          class="modal__preview-close"
+          id="preview-modal-close"
+          type="button"
+          aria-label="Modal Close Button"
+        ></button>
+        <img
+          class="modal__preview-image"
+          id="card-preview-image"
+          src="https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/around-project/yosemite.jpg"
+          alt="Preview Image"
+        />
+        <h2 class="modal__preview-title" id="card-preview-title"></h2>
+      </div>
+    </div>
+    <!-- Modal: Card Template -->
     <template id="card-template">
       <li class="card__list-item">
+        <div class="card__delete">
+          <button
+            class="card__delete-button"
+            id="card-delete"
+            type="button"
+            aria-label="card Delete Button"
+          ></button>
+        </div>
         <img class="card__image" src="" alt="" />
         <div class="card__description">
           <h2 class="card__title"></h2>
