--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           aria-label="Modal Close Button"
         ></button>
         <h2 class="modal__heading">Edit profile</h2>
-        <form class="modal__form">
+        <form class="modal__form" name="profile-form">
           <input
             type="text"
             class="modal__input"
@@ -110,7 +110,7 @@
           aria-label="Modal Close Button"
         ></button>
         <h2 class="modal__heading">New place</h2>
-        <form class="modal__form" id="add-card-form">
+        <form class="modal__form" id="add-card-form" name="card-form">
           <input
             type="text"
             class="modal__input modal__input_type_title"
@@ -143,7 +143,7 @@
     <div class="modal" id="preview-image-modal">
       <div class="modal__preview-container">
         <button
-          class="modal__preview-close"
+          class="modal__close"
           id="preview-modal-close"
           type="button"
           aria-label="Modal Close Button"
