--- a/index.html
+++ b/index.html
@@ -71,15 +71,21 @@
           aria-label="Modal Close Button"
         ></button>
         <h2 class="modal__heading">Edit profile</h2>
-        <form class="modal__form" name="profile-form">
+        <form class="modal__form" name="profile-form" id="edit-card-form">
           <input
             type="text"
             class="modal__input"
             id="profile-title-input"
             name="title"
             placeholder="Name"
+            minlength="2"
+            maxlength="40"
             required
           />
+          <span
+            class="modal__input-error"
+            id="profile-title-input-error"
+          ></span>
           <input
             type="text"
             class="modal__input"
@@ -88,10 +94,15 @@
             placeholder="Description"
             required
           />
+
+          <span class="modal__input-error" id="profile-description-input-error">
+          </span>
+
           <button
             class="modal__button"
             type="submit"
-            aria-label="Modal Save Button"
+            aria-label="Save Button"
+            disabled
           >
             Save
           </button>
@@ -117,8 +128,12 @@
             id="add-card-title-input"
             name="title"
             placeholder="Title"
+            minlength="1"
+            maxlength="30"
             required
           />
+          <span class="modal__input-error" id="add-card-title-input-error">
+          </span>
           <input
             type="url"
             class="modal__input modal__input_type_URL"
@@ -127,10 +142,11 @@
             placeholder="Image Link"
             required
           />
+          <span class="modal__input-error" id="add-card-modal-URL-error"></span>
           <button
             class="modal__button"
             type="submit"
-            aria-label="Modal Save Button"
+            aria-label="Save Button"
           >
             Save
           </button>
@@ -180,6 +196,7 @@
       </li>
     </template>
 
-    <script src="scripts/index.js" defer></script>
+    <script src="./scripts/validate.js" defer></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
