--- a/index.html
+++ b/index.html
@@ -196,7 +196,6 @@
       </li>
     </template>
 
-    <script src="./scripts/validate.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <script src="./pages/index.js" type="module"></script>
   </body>
 </html>
